--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build with Next.js
-        run: npm run build
+        run: npm run export
       - name: Add .nojekyll file
         run: touch ./out/.nojekyll
       - name: Upload artifact
